--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/briantrang/briantrang.github.io",
+  "homepage": "https://github.com/briantrang/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
