--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "publish": "",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "redeploy": "sh build.sh && sh deploy.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
