--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.15.5",
     "node-sass": "^4.14.1",
+    "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -21,7 +24,7 @@
   "scripts": {
     "publish": "",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "redeploy": "sh build.sh && sh deploy.sh"
