--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-swipeable-views": "^0.13.9"
+    "react-swipeable-views": "^0.13.9",
+    "react-transition-group": "^4.4.2"
   },
   "scripts": {
     "publish": "",
