--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://briantrang.github.io/",
+  "homepage": "https://briantrang.com/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.4",
     "re-base": "^4.0.0",
     "react": "^16.13.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-rotating-text": "^1.4.1",
@@ -36,7 +37,8 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "redeploy": "sh build.sh && sh deploy.sh"
+    "redeploy": "sh build.sh && sh deploy.sh",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
