--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
-    "react-transition-group": "^4.4.2"
+    "react-transition-group": "^4.4.2",
+    "swiper": "^6.8.4"
   },
   "scripts": {
     "publish": "",
